<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Header">My NanoDegree Apps</string>
    <string name="App1">Spotify Streamer</string>
    <string name="App2">Football Scores App</string>
    <string name="App3">Library App</string>
    <string name="App4">Build It Bigger</string>
    <string name="App5">XYZ Reader</string>
    <string name="App6">Capstone</string>
</resources>
