<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/Header" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App1"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:background="@drawable/rounded"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="@dimen/activity_button_spacing"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App2"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:background="@drawable/rounded"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="@dimen/activity_button_spacing"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:background="@drawable/rounded"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="@dimen/activity_button_spacing"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:background="@drawable/rounded"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="@dimen/activity_button_spacing"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:background="@drawable/rounded"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="@dimen/activity_button_spacing"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:background="@drawable/rounded"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_marginTop="@dimen/activity_button_spacing"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

</RelativeLayout>
